--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,9 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-as-citation-manager",
+	"name": "Obsidian as Citation Manager",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "A citation manager where Obsidian is the source of truth for literature notes.",
+	"author": "Kolja Sam",
 	"isDesktopOnly": false
 }
